build(auto-release): publish package

--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/auto-release",
+  "name": "@nutint/auto-release",
   "version": "0.0.1",
   "description": "A Toolkit to simplify release process",
   "main": "bin/auto-release.js",
