--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "A Toolkit to simplify release process",
   "main": "bin/auto-release.js",
+  "bin": {
+    "auto-release": "dist/index.js"
+  },
   "type": "module",
   "scripts": {
     "dev": "tsc --watch",
