--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "conventional-commits-parser": "^6.0.0",
+    "jira.js": "^4.0.2",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
   }
