build(auto-release): make package public

--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "auto-release": "dist/index.js"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
+  },
   "type": "module",
   "scripts": {
     "dev": "tsc --watch",
