--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -14,18 +14,20 @@
   "scripts": {
     "dev": "tsc --watch",
     "test": "vitest --run --config vitest.config.unit.ts",
+    "test:coverage": "vitest run --config vitest.config.unit.ts --coverage",
     "test:integration": "vitest --run --config vitest.config.integration.ts",
     "build": "tsup src/index.ts --format cjs,esm --dts"
   },
   "exports": "./src/index.ts",
   "devDependencies": {
     "@nutint/typescript-config": "workspace:*",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.8.2",
     "@types/semver": "^7.5.8",
-    "tsup": "^8.3.0",
+    "@vitest/coverage-istanbul": "^2.1.4",
+    "tsup": "^8.3.5",
     "typescript": "latest",
-    "vite": "^5.4.6",
-    "vitest": "^2.0.5"
+    "vite": "^5.4.10",
+    "vitest": "^2.1.4"
   },
   "dependencies": {
     "conventional-commits-parser": "^6.0.0",
