--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "conventional-commits-parser": "^6.0.0",
+    "inquirer": "^12.0.1",
     "jira.js": "^4.0.2",
     "rxjs": "^7.8.1",
     "semver": "^7.6.3",
