--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -30,6 +30,7 @@
     "vitest": "^2.1.4"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "conventional-commits-parser": "^6.0.0",
     "inquirer": "^12.0.1",
     "jira.js": "^4.0.2",
