--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -21,6 +21,7 @@
   "exports": "./src/index.ts",
   "devDependencies": {
     "@nutint/typescript-config": "workspace:*",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.9.0",
     "@types/semver": "^7.5.8",
     "@vitest/coverage-istanbul": "^2.1.4",
@@ -32,6 +33,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "conventional-commits-parser": "^6.0.0",
+    "dayjs": "^1.11.13",
+    "fs-extra": "^11.2.0",
     "inquirer": "^12.0.1",
     "jira.js": "^4.0.2",
     "rxjs": "^7.8.1",
