--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "commitlint": "commitlint --edit"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.2",
-    "prettier": "^3.4.2",
-    "turbo": "^2.3.4",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.1",
+    "turbo": "^2.4.2",
     "typescript": "^5.7.3"
   },
   "packageManager": "pnpm@8.15.6",
@@ -28,7 +28,8 @@
     "overrides": {
       "braces": "^3.0.3",
       "micromatch": "^4.0.8",
-      "rollup": "^4.22.4"
+      "rollup": "^4.22.4",
+      "esbuild": "^0.25.0"
     }
   }
 }
