--- a/packages/auto-release/package.json
+++ b/packages/auto-release/package.json
@@ -22,24 +22,26 @@
   "devDependencies": {
     "@nutint/typescript-config": "workspace:*",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.13.4",
     "@types/semver": "^7.5.8",
-    "@vitest/coverage-istanbul": "^2.1.8",
-    "tsup": "^8.3.5",
+    "@vitest/coverage-istanbul": "^2.1.9",
+    "tsup": "^8.3.6",
     "typescript": "latest",
-    "vite": "^5.4.11",
-    "vitest": "^2.1.8"
+    "vite": "^5.4.14",
+    "vitest": "^2.1.9"
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "conventional-commits-parser": "^6.0.0",
+    "conventional-commits-parser": "^6.1.0",
     "dayjs": "^1.11.13",
-    "fs-extra": "^11.2.0",
-    "inquirer": "^12.2.0",
-    "jira.js": "^4.0.2",
+    "fs-extra": "^11.3.0",
+    "inquirer": "^12.4.2",
+    "jira.js": "^4.0.6",
     "rxjs": "^7.8.1",
-    "semver": "^7.6.3",
+    "semver": "^7.7.1",
     "winston": "^3.17.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
+  },
+  "overrides": {
   }
 }
